# claude-plugin

./: .gitignore  .gitmodules  .mcp.json  AGENTS.md  CLAUDE.md  EMAIL_TEMPLATES.md  HOWITWORKS.md  README.md  llms-full.txt  llms.txt  opencode.json  package.json
.claude/: handoff.md  settings.json
.claude-plugin/: marketplace.json  plugin.json
.cursor/: settings.json
.cursor/plans/: conversational_onboarding_bf77dcc7.plan.md  purge_search_from_llm_90972c42.plan.md  reasoning_ui_blockquotes_95441394.plan.md
.cursor/rules/: adapters-naming.mdc  bun-test-standards.mdc  commit-with-testing.mdc  do-not-run-bun-test.mdc  file-naming-convention.mdc  (+8 more)
backend/: .env.example  package.json
cli/: README.md  package.json
docs/: INTEGRATION_GUIDE.md  architecture-overview.md  backend_session.md  crawl4ai-testing.md  index-links-explanation.md  observability-changes.md  swe-config.json  task-index-links.md
evaluator/: .env.example  drizzle.config.ts  middleware.ts  package.json
frontend/: .env.example  Dockerfile  README.md  next.config.ts  package.json  playwright.config.ts  railway.toml  vite.config.ts  vitest.config.ts
plugin/: package.json
protocol/: .env.example  Dockerfile  README.md  env.example  generate-mock-data.js  nodemon.json  package-lock.json  package.json  simple_migration.sql  tsconfig.json
scripts/: build-skills.ts  worktree-dev.sh  worktree-list.sh  worktree-setup.sh
src/: auth.ts  cli-runner.ts  index.ts
types/: api.ts
webhooks/openclaw/: Cargo.toml  README.md
webhooks/openclaw/src/: dedup.rs  handler.rs  main.rs  prompt.rs  verify.rs
(+882 files in other folders)
