[package]
name = "index-webhook-relay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "index-webhook"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
hmac = "0.12"
sha2 = "0.10"
subtle = "2"  # constant-time comparison used internally by hmac::verify_slice
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
axum-test = "15"
